--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
         "behat/mink-goutte-driver": "^1.2"
     },
     "autoload": {
-        "psr-0": {
-            "": "/"
+        "psr-4": {
+            "Mrsuh": ""
         }
     }
 }
