--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "mrsuh/vk-api",
     "type": "library",
-    "description": "API for social network vkontakte",
+    "description": "API auth for social network vkontakte",
     "keywords" : ["api", "vk", "vkontakte"],
     "homepage": "https://github.com/mrsuh/vk-api",
     "license": "MIT",
@@ -11,10 +11,10 @@
         "role": "Developer"
     }],
     "require": {
-        "php": ">=5.6.0",
-        "guzzlehttp/guzzle": "^6.1",
-        "behat/mink": "^1.7",
-        "behat/mink-goutte-driver": "^1.2"
+        "php": ">=5.6",
+        "guzzlehttp/guzzle": "6.*",
+        "behat/mink": "1.*",
+        "behat/mink-goutte-driver": "1.*"
     },
     "autoload": {
         "psr-4": {
