--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": ">=5.6",
         "guzzlehttp/guzzle": "6.*",
-        "behat/mink": "1.*",
+        "behat/mink": "dev-master",
         "behat/mink-goutte-driver": "1.*"
     },
     "autoload": {
